# blogs

flask_blog/: .flaskenv  config.py  pyproject.toml
flask_blog/app/: __init__.py  models.py
flask_blog/app/auth/: forms.py  views.py
flask_blog/app/main/: views.py
flask_blog/app/templates/auth/: login.html
flask_blog/migrations/versions/: ac12e9b5446c_initial_migration.py
