[tool.poetry]
name = "flask-blog"
version = "0.1.0"
description = ""
authors = ["Andrey Kuzmin <andromed-ku@yandex.ru>"]
readme = "README.md"
packages = [{include = "flask_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.3.0"
flask-bootstrap = "^3.3.7.1"
flask-sqlalchemy = "^3.1.1"
flask-mail = "^0.9.1"
alembic = "^1.12.0"
flask-migrate = "^4.0.5"
flask-moment = "^1.0.5"
flask-wtf = "^1.2.1"
python-dotenv = "^1.0.0"
flask-login = "^0.6.2"
werkzeug = "2.3.0"
d = "^0.2.2"
wtforms = {extras = ["email"], version = "^3.1.0"}
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
